--- a/InstrumentMemoryGraph.xcodeproj/xcshareddata/xcschemes/InstrumentMemoryGraph.xcscheme
+++ b/InstrumentMemoryGraph.xcodeproj/xcshareddata/xcschemes/InstrumentMemoryGraph.xcscheme
@@ -39,7 +39,10 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      showGraphicsOverview = "Yes"
+      logGraphicsOverview = "Yes"
+      allowLocationSimulation = "YES"
+      queueDebuggingEnabled = "No">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
